--- a/Assets/Scripts/Gameplay/Unity.BossRoom.Gameplay.asmdef
+++ b/Assets/Scripts/Gameplay/Unity.BossRoom.Gameplay.asmdef
@@ -22,7 +22,9 @@
         "VContainer",
         "Unity.BossRoom.VisualEffects",
         "Unity.BossRoom.CameraUtils",
-        "Unity.Multiplayer.Tools.NetworkSimulator.Runtime"
+        "Unity.Multiplayer.Tools.NetworkSimulator.Runtime",
+        "Unity.InputSystem",
+        "Project.NewAssets"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
